# agent-model-integration

./: .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  modelDescription.xml
.github/workflows/: build.yml
Documentation/: CMP_Phase1_Analyze.md  CMP_Phase2_RequirementSpec.md  CMP_Phase3_DesignSpec.md  CMP_Phase4_Implementation.md  ikaDriver.srmd
doc/: CMP_Phase1_Analyze.md  CMP_Phase2_RequirementSpec.md  CMP_Phase3_DesignSpec.md  CMP_Phase4_Implementation.md
include/: IkaAgent.h  Logger.h  OSI_helper.h  OSMPTrafficAgent.h  OsiConverter.h  PrimaryController.h  Utils_osi.h  VehicleModel.h
lib/: INFO.md
lib/SimDriver/: CMakeLists.txt
lib/open-simulation-interface/: open_simulation_interface-config-version.cmake.in
lib/osiWrapper/: CMakeLists.txt
lib/osiWrapper/src/: IkaAgent.cpp  IkaAgent.h  Logger.cpp  Logger.h  OSI_helper.h  OsiConverter.cpp  OsiConverter.h  PrimaryController.h  Spdlogger.cpp  Spdlogger.h  Utils_checker.h  Utils_general.h  Utils_geometry.h  Utils_osi.h  Utils_route.h  VehicleModel.cpp
lib/osiWrapper/test/: osiTraceTest.cpp
scripts/: README.md  plotBasicManeuvers.sh  plotDriverState.py  plotEgoInput.py  plotGroundTruthTrace.py  plotHorizon.py  plotPaperManeuvers.sh  plotSpeedComparison.py  plotState.py  plotVehicleState.py  plots.sh  style_multi.mplstyle  style_single.mplstyle
src/: IkaAgent.cpp  Logger.cpp  OSMPTrafficAgent.cpp  OsiConverter.cpp  PrimaryController.cpp  VehicleModel.cpp
test/: evalOpenPassRun.m  osiTraceTest.cpp
test/OpenPASS_configs/: EinfacheKreuzung_VR203_MS1_mod.xodr  PedestrianCatalog_MS1.xosc  ProfilesCatalog.xml  Scenario_UC13_MS1_mod.xosc  Trajectories_MS1.xosc  VehicleCatalog_MS1.xosc  slaveConfig.xml  systemConfig.xml  systemConfigBlueprint.xml
test/traces/: .gitignore
